--- a/ContactWeb/appsettings.json
+++ b/ContactWeb/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ContactWeb-C9745B0E-3B8B-4B33-BCD7-2659139993AA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ContactWeb-C9745B0E-3B8B-4B33-BCD7-2659139993AA;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MyContactManager": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ContactWeb-C9745B0E-3B8B-4B33-BCD7-2659139993AA;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
