added libraries for states and contacts services and repositories

--- a/ContactWeb/ContactWeb.csproj
+++ b/ContactWeb/ContactWeb.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyContactMangerData\MyContactManagerData.csproj" />
+    <ProjectReference Include="..\MyContactManagerServices\MyContactManagerServices.csproj" />
   </ItemGroup>
 
 </Project>
